--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <input type="text" placeholder="name" class="login__input">
-        <button type="submit" class="login__button" >Play</button>
+        <button type="submit" class="login__button" disabled>Play</button>
 
     </form>
 
