att memory game

--- a/pages/game.html
+++ b/pages/game.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
     <link rel="shortcut icon" href="../one-piece/favicon.ico.ico">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/game.css">
 </head>
 <body>
-    <h1>teste</h1>
+    <div class="grid">
+    
+        <div class="card">
+            <div class="face front"></div>
+            <div class="face back"></div>
+        </div>
+    </div>
 </body>
 </html>
