memory game finalizado

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <form class="login-form">
 
         <div class="login__header">
-            <img src="./one-piece/brain.png" alt="Brain icon">
+            <img src="./one-piece/zoroperdido.png" alt="Brain icon">
             <h1> Memory Game</h1>
         </div>
 
