--- a/pages/game.html
+++ b/pages/game.html
@@ -8,14 +8,18 @@
     <link rel="shortcut icon" href="../one-piece/favicon.ico.ico">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/game.css">
+
+    <script defer src="../js/game.js"></script>
+
 </head>
 <body>
-    <div class="grid">
-    
-        <div class="card">
-            <div class="face front"></div>
-            <div class="face back"></div>
-        </div>
-    </div>
+    <main>
+        <header>
+          <span class="player"></span>
+          <span>Tempo: <span class="timer">00</span></span>
+        </header>
+      
+        <div class="grid"></div>
+      </main>
 </body>
 </html>
